--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ venv/
 .vscode/
 python/__pycache__/
 python/utils/__pycache__/
+python/vod_methods/__pycache__/
+python/datasets/__pycache__/
 BrackishMOT/
 MOT17/
 yolov5s.pt
